强制横屏，可以实现反色

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">openCvForAndroid</string>
+    <string name="invert">反色</string>
+    <string name="edge">边沿</string>
+    <string name="sobel">梯度</string>
+    <string name="boxblue">模糊</string>
 </resources>
